--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@folio/plugin-find-organization": ">=1.0.0",
     "@folio/plugin-find-package-title": ">=1.0.0",
     "@folio/plugin-find-po-line": ">=1.0.0",
-    "@folio/plugin-find-user": "https://github.com/folio-org/ui-plugin-find-user#UIPFU-96",
+    "@folio/plugin-find-user": ">=1.3.0",
     "@folio/plugin-query-builder": ">=1.0.0",
     "@folio/quick-marc": ">=1.0.0",
     "@folio/reading-room": ">=1.0.0",
@@ -113,7 +113,6 @@
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
     "moment": "~2.29.0",
-    "redux-form": "^8.0.0",
-    "@folio/stripes-components": "https://github.com/folio-org/stripes-components#STCOM-1331"
+    "redux-form": "^8.0.0"
   }
 }
