--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@folio/plugin-find-user": ">=1.3.0",
     "@folio/plugin-query-builder": ">=1.0.0",
     "@folio/quick-marc": ">=1.0.0",
-    "@folio/reading-room": ">=1.0.0",
+    "@folio/reading-room": "https://github.com/folio-org/ui-reading-room#UIRR-14",
     "@folio/receiving": ">=1.0.0",
     "@folio/remote-storage": ">=1.0.0",
     "@folio/requests": "https://github.com/folio-org/ui-requests#test-UIREQ-1130",
