--- a/eureka-tpl/package.json
+++ b/eureka-tpl/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "@folio/acquisition-units": ">=1.0.0",
+    "@folio/authorization-policies": ">=1.0.0",
+    "@folio/authorization-roles": ">=1.0.0",
+    "@folio/plugin-select-application": ">=1.0.0",
     "@folio/agreements": ">=2.0.0",
     "@folio/bulk-edit": ">=1.0.0",
     "@folio/calendar": ">=2.0.5",
@@ -107,7 +110,6 @@
     "lodash": "^4.17.5"
   },
   "resolutions": {
-    "typescript": "~5.5",
     "@rehooks/local-storage": "2.4.4",
     "colors": "1.4.0",
     "final-form": "^4.20.4",
