--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@folio/stripes": "9.2.3",
     "@folio/stripes-authority-components": "5.0.0",
     "@folio/stripes-erm-components": "9.2.0",
+    "@folio/stripes-inventory-components": "1.0.0",
     "@folio/stripes-marc-components": "1.1.0",
     "@folio/serials-management": "1.1.0",
     "@folio/tags": "8.2.0",
