--- a/package.json
+++ b/package.json
@@ -13,39 +13,39 @@
   },
   "dependencies": {
     "@folio/acquisition-units": "5.1.0",
-    "@folio/agreements": "11.0.0",
-    "@folio/bulk-edit": "4.1.0",
-    "@folio/calendar": "11.0.0",
-    "@folio/checkin": "9.1.0",
+    "@folio/agreements": "11.0.3",
+    "@folio/bulk-edit": "4.1.4",
+    "@folio/calendar": "11.0.2",
+    "@folio/checkin": "9.1.1",
     "@folio/checkout": "10.1.0",
     "@folio/circulation": "9.1.0",
     "@folio/circulation-log": "4.1.0",
     "@folio/courses": "6.0.3",
     "@folio/consortia-settings": "1.1.0",
     "@folio/dashboard": "6.0.0",
-    "@folio/data-export": "6.1.0",
-    "@folio/data-import": "7.1.0",
+    "@folio/data-export": "6.1.4",
+    "@folio/data-import": "7.1.9",
     "@folio/developer": "8.0.1",
     "@folio/eholdings": "9.1.1",
     "@folio/erm-comparisons": "7.0.0",
-    "@folio/erm-usage": "8.1.0",
-    "@folio/export-manager": "3.1.0",
+    "@folio/erm-usage": "9.0.0",
+    "@folio/export-manager": "3.1.2",
     "@folio/finance": "6.0.0",
     "@folio/gobi-settings": "3.1.0",
     "@folio/handler-stripes-registry": "2.2.0",
-    "@folio/inventory": "11.0.0",
-    "@folio/invoice": "6.0.0",
+    "@folio/inventory": "11.0.5",
+    "@folio/invoice": "6.0.4",
     "@folio/ldp": "2.1.0",
-    "@folio/licenses": "11.0.0",
-    "@folio/lists" : "3.0.0",
-    "@folio/local-kb-admin": "8.0.0",
-    "@folio/marc-authorities": "5.0.0",
+    "@folio/licenses": "11.0.2",
+    "@folio/lists" : "3.0.2",
+    "@folio/local-kb-admin": "8.0.1",
+    "@folio/marc-authorities": "5.0.1",
     "@folio/myprofile": "9.1.0",
     "@folio/notes": "9.1.0",
     "@folio/oai-pmh": "5.1.0",
-    "@folio/orders": "6.0.1",
-    "@folio/organizations": "5.1.0",
-    "@folio/plugin-bursar-export": "4.0.0",
+    "@folio/orders": "6.0.4",
+    "@folio/organizations": "5.1.1",
+    "@folio/plugin-bursar-export": "4.0.2",
     "@folio/plugin-create-inventory-records": "4.1.0",
     "@folio/plugin-find-agreement": "11.0.1",
     "@folio/plugin-find-authority": "4.0.0",
@@ -54,29 +54,29 @@
     "@folio/plugin-find-erm-usage-data-provider": "6.1.0",
     "@folio/plugin-find-fund": "3.1.0",
     "@folio/plugin-find-import-profile": "7.1.0",
-    "@folio/plugin-find-instance": "7.1.0",
+    "@folio/plugin-find-instance": "7.1.1",
     "@folio/plugin-find-interface": "5.1.0",
     "@folio/plugin-find-license": "11.0.1",
-    "@folio/plugin-find-organization": "5.1.0",
+    "@folio/plugin-find-organization": "5.1.1",
     "@folio/plugin-find-package-title": "6.1.0",
-    "@folio/plugin-find-po-line": "5.1.0",
-    "@folio/plugin-find-user": "7.1.0",
-    "@folio/plugin-query-builder" : "1.1.2",
-    "@folio/quick-marc": "8.0.0",
-    "@folio/receiving": "5.0.0",
+    "@folio/plugin-find-po-line": "5.1.1",
+    "@folio/plugin-find-user": "7.1.2",
+    "@folio/plugin-query-builder" : "1.1.5",
+    "@folio/quick-marc": "8.0.1",
+    "@folio/receiving": "5.0.5",
     "@folio/remote-storage": "5.1.0",
-    "@folio/requests": "9.1.0",
+    "@folio/requests": "9.1.2",
     "@folio/servicepoints": "7.1.0",
     "@folio/plugin-eusage-reports": "3.1.0",
-    "@folio/service-interaction": "3.0.0",
-    "@folio/stripes": "9.1.1",
-    "@folio/stripes-authority-components": "4.0.0",
-    "@folio/stripes-erm-components": "9.1.0",
-    "@folio/stripes-marc-components": "1.0.0",
-    "@folio/serials-management": "1.0.0",
+    "@folio/service-interaction": "3.0.1",
+    "@folio/stripes": "9.1.6",
+    "@folio/stripes-authority-components": "4.0.1",
+    "@folio/stripes-erm-components": "9.1.2",
+    "@folio/stripes-marc-components": "1.0.1",
+    "@folio/serials-management": "1.0.5",
     "@folio/tags": "8.1.0",
     "@folio/tenant-settings": "8.1.0",
-    "@folio/users": "10.1.0",
+    "@folio/users": "10.1.2",
     "final-form": "^4.20.7",
     "final-form-arrays": "^3.0.2",
     "moment": "~2.29.0",
@@ -102,6 +102,8 @@
     "lodash": "^4.17.5"
   },
   "resolutions": {
+    "@folio/stripes-template-editor": "v3.3.4",
+    "typescript": "~5.5",
     "@rehooks/local-storage": "2.4.5",
     "colors": "1.4.0",
     "final-form": "^4.20.4",
