--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@folio/notes": ">=1.0.0",
     "@folio/oa": ">=1.0.0",
     "@folio/oai-pmh": ">=1.0.0",
-    "@folio/orders": ">=1.0.0",
+    "@folio/orders": "https://github.com/folio-org/ui-orders.git#audit-events-sort",
     "@folio/organizations": ">=1.0.0",
     "@folio/plugin-bursar-export": ">=1.0.0",
     "@folio/plugin-create-inventory-records": ">=1.0.0",
