--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@folio/handler-stripes-registry": ">=1.0.0",
     "@folio/inn-reach": ">=1.1.0",
     "@folio/inventory": ">=1.1.0",
-    "@folio/invoice": ">=1.0.0",
+    "@folio/invoice": "https://github.com/folio-org/ui-invoice.git#UINV-553",
     "@folio/ldp": ">=1.1.0",
     "@folio/licenses": ">=2.0.0",
     "@folio/lists": ">=1.2.0",
