--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "ts-loader": "^9.4.4"
   },
   "resolutions": {
+    "typescript": "~5.5",
     "@rehooks/local-storage": "2.4.4",
     "colors": "1.4.0",
     "final-form": "^4.20.4",
