--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@folio/calendar": ">=2.0.5",
     "@folio/checkin": ">=1.3.0",
     "@folio/checkout": ">=1.3.0",
-    "@folio/circulation": "1.3.0",
+    "@folio/circulation": ">=1.3.0",
     "@folio/circulation-log": ">=1.0.0",
     "@folio/claims": ">=1.0.0",
     "@folio/courses": ">=1.0.0",
