--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "@folio/stripes-marc-components": ">=1.0.0",
     "@folio/tags": ">=1.1.0",
     "@folio/tenant-settings": "https://github.com/folio-org/ui-tenant-settings.git#UITEN-281",
-    "@folio/users": ">=11.0.0",
+    "@folio/users": "https://github.com/folio-org/ui-users.git#UIREQ-1198",
     "final-form": "^4.20.7",
     "final-form-arrays": "^3.0.2",
     "moment": "~2.29.0",
