--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@folio/quick-marc": ">=1.0.0",
     "@folio/receiving": ">=1.0.0",
     "@folio/remote-storage": ">=1.0.0",
-    "@folio/requests": "https://github.com/folio-org/ui-requests.git#UIREQ-1154",
+    "@folio/requests": ">=11.0.0",
     "@folio/requests-mediated": ">=1.0.0",
     "@folio/serials-management": ">=1.0.0",
     "@folio/service-interaction": ">=1.0.0",
@@ -80,7 +80,7 @@
     "@folio/stripes-marc-components": ">=1.0.0",
     "@folio/tags": ">=1.1.0",
     "@folio/tenant-settings": "https://github.com/folio-org/ui-tenant-settings.git#UITEN-281",
-    "@folio/users": "https://github.com/folio-org/ui-users.git#UIREQ-1198",
+    "@folio/users": ">=11.0.0",
     "final-form": "^4.20.7",
     "final-form-arrays": "^3.0.2",
     "moment": "~2.29.0",
