--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@folio/calendar": ">=2.0.5",
     "@folio/checkin": ">=1.3.0",
     "@folio/checkout": ">=1.3.0",
-    "@folio/circulation": "https://github.com/folio-org/ui-circulation.git#UXPROD-4559-ECS",
+    "@folio/circulation": ">=9.2.0",
     "@folio/circulation-log": ">=1.0.0",
     "@folio/courses": ">=1.0.0",
     "@folio/dashboard": ">=1.0.0",
@@ -69,7 +69,7 @@
     "@folio/reading-room": ">=1.0.0",
     "@folio/receiving": ">=1.0.0",
     "@folio/remote-storage": ">=1.0.0",
-    "@folio/requests": "https://github.com/folio-org/ui-requests.git#UXPROD-4559-ECS",
+    "@folio/requests": ">=11.0.0",
     "@folio/requests-mediated": ">=1.0.0",
     "@folio/serials-management": ">=1.0.0",
     "@folio/service-interaction": ">=1.0.0",
