--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "lodash": "^4.17.5"
   },
   "resolutions": {
+    "@jridgewell/gen-mapping": "0.3.6",
     "@types/react": "^18",
     "@folio/stripes-template-editor": "3.4.1",
     "typescript": "~5.5",
