--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "lodash": "^4.17.5"
   },
   "resolutions": {
+    "@jridgewell/gen-mapping": "0.3.7",
     "@folio/stripes-template-editor": "v3.3.4",
     "typescript": "~5.5",
     "@rehooks/local-storage": "2.4.5",
