--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
   },
   "resolutions": {
     "@jridgewell/gen-mapping": "0.3.7",
+    "@types/react": "^18",
     "@folio/stripes-template-editor": "v3.3.4",
     "typescript": "~5.5",
     "@rehooks/local-storage": "2.4.5",
