--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0-SNAPSHOT",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "export NODE_OPTIONS=\"--max-old-space-size=4096 $NODE_OPTIONS\"; stripes build stripes.config.js",
+    "build": "export NODE_OPTIONS=\"--max-old-space-size=8000 $NODE_OPTIONS\"; stripes build stripes.config.js",
     "stripes": "stripes",
     "start": "stripes serve stripes.config.js",
     "build-module-descriptors": "stripes mod descriptor stripes.config.js --output ./ModuleDescriptors",
@@ -109,6 +109,7 @@
   "resolutions": {
     "typescript": "~5.5",
     "@rehooks/local-storage": "2.4.4",
+    "@types/react": "^18.3.14",
     "colors": "1.4.0",
     "final-form": "^4.20.4",
     "minimist": "^1.2.3",
