--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "@folio/stripes-components": "https://github.com/folio-org/stripes-components.git#master",
     "@folio/stripes-authority-components": "https://github.com/folio-org/stripes-authority-components.git#master",
     "@folio/stripes-marc-components": "https://github.com/folio-org/stripes-marc-components.git#master",
-    "@folio/stripes-data-transfer-components": "https://github.com/folio-org/stripes-data-transfer-components.git#poc-delete-authority-job",
     "@folio/stripes-acq-components": "https://github.com/folio-org/stripes-acq-components.git#master",
     "@folio/stripes-erm-components": "https://github.com/folio-org/stripes-erm-components.git#master",
+    "@folio/stripes-inventory-components": "https://github.com/folio-org/stripes-inventory-components.git#main",
     "@folio/stripes-ui": ">=1.0.0",
     "@folio/users": "https://github.com/folio-org/ui-users.git#master",
     "@folio/quick-marc": "https://github.com/folio-org/ui-quick-marc.git#master",
@@ -95,7 +95,6 @@
     "@folio/stripes-form": "^9.0.0",
     "@folio/stripes-smart-components": "^9.0.0",
     "@folio/stripes-util": "^6.0.0",
-    "@folio/stripes-data-transfer-components": "https://github.com/folio-org/stripes-data-transfer-components.git#poc-delete-authority-job",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
