--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@folio/remote-storage": ">=1.0.0",
     "@folio/requests": ">=1.4.1",
     "@folio/search": ">=1.3.0",
+    "@folio/service-interaction": ">=1.0.0",
     "@folio/servicepoints": ">=1.1.0",
     "@folio/stripes": "^9.0.0",
     "@folio/stripes-authority-components": ">=2.0.0",
