--- a/package.json
+++ b/package.json
@@ -3,13 +3,8 @@
   "version": "3.9.0",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "export NODE_OPTIONS=\"--max-old-space-size=4096 $NODE_OPTIONS\"; stripes build stripes.config.js",
-    "stripes": "stripes",
-    "start": "stripes serve stripes.config.js",
-    "build-module-descriptors": "stripes mod descriptor stripes.config.js --output ./ModuleDescriptors",
-    "local": "f=stripes.config.js; test -f $f.local && f=$f.local; echo Using config $f; stripes serve $f",
-    "test": "echo 'No unit tests implemented'",
-    "lint": "eslint test/ui-testing"
+    "build": "export NODE_OPTIONS=\"--max-old-space-size=4096 $NODE_OPTIONS\"; stripes-build build stripes.config.js",
+    "build-module-descriptors": "stripes-build mod descriptor stripes.config.js --output ./ModuleDescriptors"
   },
   "dependencies": {
     "@folio/acquisition-units": "6.0.0",
