--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "3.9.0",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "export NODE_OPTIONS=\"--max-old-space-size=8192 $NODE_OPTIONS\"; stripes-build build stripes.config.js",
-    "build-module-descriptors": "stripes-build mod descriptor stripes.config.js --output ./ModuleDescriptors"
+    "build": "export NODE_OPTIONS=\"--max-old-space-size=8000 $NODE_OPTIONS\"; stripes-build build stripes.config.js",
+    "start": "stripes serve stripes.config.js",
+    "build-module-descriptors": "stripes-build mod descriptor stripes.config.js --full --strict  --output ./ModuleDescriptors",
+    "local": "f=stripes.config.js; test -f $f.local && f=$f.local; echo Using config $f; stripes serve $f",
+    "test": "echo 'No unit tests implemented'"
   },
   "dependencies": {
     "@folio/acquisition-units": "6.0.0",
